vlib/v/checker/tests/fixed_array_decompose_err.vv
fn sum(a ...int) int {
	mut total := 0
	for x in a {
		total += x
	}
	return total
}

fn main() {
	arr := [1, 2, 3, 4]!
	sum(...arr)
}
